charon/tests/ui/issue-394-rpit-with-lifetime.out
error: Unimplemented: Ty { kind: Alias(Alias { kind: Opaque, args: [Lifetime(Region { kind: ReEarlyParam(EarlyParamRegion { index: 0, name: "'a" }) }), Lifetime(Region { kind: ReEarlyParam(EarlyParamRegion { index: 0, name: "'a" }) })], def_id: test_crate::sparse_transitions::{opaque#0} }) }
 --> tests/ui/issue-394-rpit-with-lifetime.rs:3:1
  |
3 | / fn sparse_transitions<'a>() -> impl Iterator<Item = u8> + 'a {
4 | |     core::iter::from_fn(|| None)
5 | | }
  | |_^

error: Ignoring the following item due to an error: test_crate::sparse_transitions
 --> tests/ui/issue-394-rpit-with-lifetime.rs:3:1
  |
3 | fn sparse_transitions<'a>() -> impl Iterator<Item = u8> + 'a {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Error: Charon driver exited with code 101
